--- a/Backend development/views/partials/header.ejs
+++ b/Backend development/views/partials/header.ejs
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/registration">Registration</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/trainees">All trainees</a>
+                    </li>
 
                 </ul>
                 <form class="d-flex" role="search">
